--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <div id="successContainer" class="hidden">
         <h1>¡SABÍA QUE DIRÍAS QUE SÍ! 😍</h1>
-        <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNHpndnN6ZzR5eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4JmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1n/lTQF061vwXBGEY7Oti/giphy.gif" alt="Celebrate gif">
+        <img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExbmZueXJueHphZ3pueXpueHphZ3pueHphZ3pueHphZ3pueHphZyZlcD12MV9pbnRlcm5hbV9naWZfYnlfaWQmY3Q9Zw/KztT2c4u8mYYUiMKdJ/giphy.gif" alt="Celebración">
     </div>
 
     <script>
@@ -74,3 +74,4 @@
 </body>
 
 </html>
+
